substrate/frame/support/test/tests/construct_runtime_ui/unsupported_meta_structure.stderr
error: feature(test)
              ^ expected one of `=`, `,`, `)` here
  --> tests/construct_runtime_ui/unsupported_meta_structure.rs:24:3
   |
24 |         #[cfg(feature(test))]
   |         ^
